# RenseOS

./: GNUmakefile  README.md
isofiles/boot/grub/: grub.cfg
src/arch/x86_64/: GNUmakefile
src/arch/x86_64/boot/: boot.asm  header.asm  long_mode.asm
src/kernel/: Cargo.toml  GNUmakefile  target.json
src/kernel/.cargo/: config.toml
src/kernel/src/: io.rs  lib.rs
src/kernel/src/Drivers/gfx/: vga.rs
src/kernel/src/Memory/: mm.rs
src/kernel/src/Structures/idt/: idt.asm  idt.c  idt.rs
src/kernel/src/shared/: shared.rs
