[package]
name = "RedoxOS_Kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
x86_64 = "0.14.10"
spin = "0.9.4"
multiboot2 = {path = "src/multiboot2/multiboot2"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]
